--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>aciwebapp</name>
 	<description>Web Application for jenkins deployment</description>
+	<packaging>war</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
